Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    AMPERSANT
    ASM
    CONSTRUCTOR
    DESTRUCTOR
    DIACRITIC
    DIV
    DOLLAR
    EXCLAMATION
    EXTERNAL
    HASHTAG
    IMPLEMENTATION
    INLINE
    INTERFACE
    INTERRUPT
    LBLOCK
    LSHIFT
    MOD
    OBJECT
    PIPE
    PRIVATE
    RBLOCK
    RSHIFT
    SHL
    SHR
    SQUOTE
    STRING
    UNIT
    USES
    VIRTUAL
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> program_heading block DOT
Rule 2     program_heading -> PROGRAM ID program_heading_opt_1 SEMICOLON
Rule 3     program_heading_opt_1 -> LPAREN identifier_list RPAREN
Rule 4     program_heading_opt_1 -> empty
Rule 5     actual_function -> ID
Rule 6     actual_parameter_list -> LPAREN actual_parameter actual_parameter_list_1 RPAREN
Rule 7     actual_parameter_list_1 -> COMMA actual_parameter actual_parameter_list_1
Rule 8     actual_parameter_list_1 -> empty
Rule 9     actual_parameter -> actual_value
Rule 10    actual_parameter -> actual_variable
Rule 11    actual_parameter -> actual_function
Rule 12    actual_parameter -> actual_procedure
Rule 13    actual_procedure -> ID
Rule 14    actual_value -> expression
Rule 15    actual_variable -> variable
Rule 16    addition_operator -> PLUS
Rule 17    addition_operator -> MINUS
Rule 18    addition_operator -> OR
Rule 19    array_type -> ARRAY LBRACKET index_type array_type_1 RBRACKET OF element_type
Rule 20    array_type_1 -> COMMA index_type array_type_1
Rule 21    array_type_1 -> empty
Rule 22    array_variable -> variable
Rule 23    assignment_statement -> variable ASSIGN expression
Rule 24    assignment_statement -> ID ASSIGN expression
Rule 25    base_type -> type
Rule 26    block -> declaration_part statement_part
Rule 27    bound_specification -> ID DOT DOT ID COLON ordinal_type_identifier
Rule 28    case_element -> case_label_list COLON statement
Rule 29    case_label_list -> constant case_label_list_1
Rule 30    case_label_list_1 -> COMMA constant case_label_list_1
Rule 31    case_label_list_1 -> empty
Rule 32    case_statement -> CASE expression OF case_element case_statement_1 case_statement_opt END
Rule 33    case_statement_1 -> SEMICOLON case_element case_statement_1
Rule 34    case_statement_1 -> empty
Rule 35    case_statement_opt -> SEMICOLON
Rule 36    case_statement_opt -> empty
Rule 37    component_variable -> indexed_variable
Rule 38    component_variable -> field_designator
Rule 39    component_variable -> file_buffer
Rule 40    compound_statement -> BEGIN statement_sequence END
Rule 41    conditional_statement -> if_statement
Rule 42    conditional_statement -> case_statement
Rule 43    conformant_array_schema -> packed_conformant_array_schema
Rule 44    conformant_array_schema -> unpacked_conformant_array_schema
Rule 45    constant_definition_part -> CONST constant_definition SEMICOLON constant_definition_part_1
Rule 46    constant_definition_part_1 -> constant_definition SEMICOLON constant_definition_part_1
Rule 47    constant_definition_part_1 -> empty
Rule 48    constant_definition -> ID EQUAL constant
Rule 49    constant -> constant_opt_sign ID
Rule 50    constant -> constant_opt_sign number
Rule 51    constant -> CONSTSTRING
Rule 52    constant_opt_sign -> PLUS
Rule 53    constant_opt_sign -> MINUS
Rule 54    constant_opt_sign -> empty
Rule 55    declaration_part -> declaration_part_opt_1 declaration_part_opt_2 declaration_part_opt_3 declaration_part_opt_4
Rule 56    declaration_part_opt_1 -> label_declaration_part
Rule 57    declaration_part_opt_1 -> empty
Rule 58    declaration_part_opt_2 -> constant_definition_part
Rule 59    declaration_part_opt_2 -> empty
Rule 60    declaration_part_opt_3 -> type_definition_part
Rule 61    declaration_part_opt_3 -> empty
Rule 62    declaration_part_opt_4 -> variable_declaration_part
Rule 63    declaration_part_opt_4 -> empty
Rule 64    directive -> FORWARD
Rule 65    element_list -> expression element_list_1
Rule 66    element_list -> empty
Rule 67    element_list_1 -> COMMA expression element_list_1
Rule 68    element_list_1 -> empty
Rule 69    element_type -> type
Rule 70    entire_variable -> ID
Rule 71    enumerated_type -> LPAREN identifier_list RPAREN
Rule 72    expression_list -> expression expression_list_1
Rule 73    expression_list_1 -> COMMA expression expression_list_1
Rule 74    expression_list_1 -> empty
Rule 75    expression -> simple_expression
Rule 76    expression -> simple_expression relational_operator simple_expression
Rule 77    factor -> NUMBER
Rule 78    factor -> CONSTSTRING
Rule 79    factor -> NIL
Rule 80    factor -> ID
Rule 81    factor -> set
Rule 82    factor -> variable
Rule 83    factor -> function_designator
Rule 84    factor -> LPAREN expression RPAREN
Rule 85    factor -> NOT factor
Rule 86    field_designator -> record_variable DOT ID
Rule 87    field_list -> fixed_part field_list_opt_1 field_list_opt_2
Rule 88    field_list -> variant_part field_list_opt_2
Rule 89    field_list -> empty
Rule 90    field_list_opt_1 -> SEMICOLON variant_part
Rule 91    field_list_opt_1 -> empty
Rule 92    field_list_opt_2 -> SEMICOLON
Rule 93    field_list_opt_2 -> empty
Rule 94    field_width -> expression
Rule 95    file_buffer -> file_variable CIRCUMFLEX
Rule 96    file_component_type -> type
Rule 97    file_type -> FILE OF file_component_type
Rule 98    file_variable -> variable
Rule 99    final_expression -> expression
Rule 100   fixed_part -> record_section fixed_part_1
Rule 101   fixed_part_1 -> SEMICOLON record_section fixed_part_1
Rule 102   fixed_part_1 -> empty
Rule 103   for_statement -> FOR ID ASSIGN initial_expression for_statement_opt_1 final_expression DO statement
Rule 104   for_statement_opt_1 -> TO
Rule 105   for_statement_opt_1 -> DOWNTO
Rule 106   formal_parameter_list -> LPAREN formal_parameter_section formal_parameter_list_1 RPAREN
Rule 107   formal_parameter_list_1 -> SEMICOLON formal_parameter_section formal_parameter_list_1
Rule 108   formal_parameter_list_1 -> empty
Rule 109   formal_parameter_section -> value_parameter_section
Rule 110   formal_parameter_section -> variable_parameter_section
Rule 111   formal_parameter_section -> procedure_parameter_section
Rule 112   formal_parameter_section -> function_parameter_section
Rule 113   fraction_length -> expression
Rule 114   function_declaration -> function_heading SEMICOLON function_declaration_1 SEMICOLON
Rule 115   function_declaration_1 -> directive
Rule 116   function_declaration_1 -> block
Rule 117   function_designator -> ID function_designator_opt_1
Rule 118   function_designator_opt_1 -> actual_parameter_list
Rule 119   function_designator_opt_1 -> empty
Rule 120   function_heading -> FUNCTION ID function_heading_opt_1 COLON result_type
Rule 121   function_heading_opt_1 -> formal_parameter_list
Rule 122   function_heading_opt_1 -> empty
Rule 123   function_parameter_section -> function_heading
Rule 124   goto_statement -> GOTO label
Rule 125   identifier_list -> ID identifier_list_1
Rule 126   identifier_list_1 -> COMMA ID identifier_list_1
Rule 127   identifier_list_1 -> empty
Rule 128   if_statement -> IF expression THEN statement if_statement_opt_1
Rule 129   if_statement_opt_1 -> ELSE statement
Rule 130   if_statement_opt_1 -> empty
Rule 131   index_type -> simple_type
Rule 132   indexed_variable -> array_variable LBRACKET expression_list RBRACKET
Rule 133   initial_expression -> expression
Rule 134   integer -> NUMBER
Rule 135   label_declaration_part -> LABEL label label_declaration_part_1 SEMICOLON
Rule 136   label_declaration_part_1 -> SEMICOLON label label_declaration_part_1
Rule 137   label_declaration_part_1 -> empty
Rule 138   label -> NUMBER
Rule 139   lower_bound -> constant
Rule 140   multiplication_operator -> TIMES
Rule 141   multiplication_operator -> DIVIDE
Rule 142   multiplication_operator -> MODULUS
Rule 143   multiplication_operator -> AND
Rule 144   number -> integer
Rule 145   number -> real_number
Rule 146   ordinal_type_identifier -> ID
Rule 147   output_list -> output_value output_list_opt_1
Rule 148   output_list_opt_1 -> COMMA output_value output_list_opt_1
Rule 149   output_list_opt_1 -> empty
Rule 150   output_value -> expression output_value_opt_1
Rule 151   output_value_opt_1 -> SEMICOLON field_width output_value_opt_2
Rule 152   output_value_opt_1 -> empty
Rule 153   output_value_opt_2 -> COLON fraction_length
Rule 154   output_value_opt_2 -> empty
Rule 155   packed_conformant_array_schema -> PACKED ARRAY LBRACKET bound_specification RBRACKET OF ID
Rule 156   parameter_type -> ID
Rule 157   parameter_type -> conformant_array_schema
Rule 158   pointer_type -> CIRCUMFLEX ID
Rule 159   pointer_variable -> variable
Rule 160   procedure_and_function_declaration_part -> procedure_and_function_declaration_part_1
Rule 161   procedure_and_function_declaration_part_1 -> procedure_declaration SEMICOLON procedure_and_function_declaration_part_1
Rule 162   procedure_and_function_declaration_part_1 -> function_declaration SEMICOLON procedure_and_function_declaration_part_1
Rule 163   procedure_and_function_declaration_part_1 -> empty
Rule 164   procedure_declaration -> procedure_heading SEMICOLON procedure_declaration_1
Rule 165   procedure_declaration_1 -> directive
Rule 166   procedure_declaration_1 -> block
Rule 167   procedure_heading -> PROCEDURE ID procedure_heading_opt_1
Rule 168   procedure_heading_opt_1 -> formal_parameter_list
Rule 169   procedure_heading_opt_1 -> empty
Rule 170   procedure_parameter_section -> procedure_heading
Rule 171   procedure_statement -> ID procedure_statement_opt_1
Rule 172   procedure_statement_opt_1 -> actual_parameter_list
Rule 173   procedure_statement_opt_1 -> empty
Rule 174   real_number -> NUMBER
Rule 175   record_section -> identifier_list COLON type
Rule 176   record_type -> RECORD field_list END
Rule 177   record_variable -> variable
Rule 178   referenced_variable -> pointer_variable CIRCUMFLEX
Rule 179   relational_operator -> EQUAL
Rule 180   relational_operator -> DEQUAL
Rule 181   relational_operator -> LESS
Rule 182   relational_operator -> LESSEQUAL
Rule 183   relational_operator -> GREATER
Rule 184   relational_operator -> GREATEREQUAL
Rule 185   relational_operator -> IN
Rule 186   repeat_statement -> REPEAT statement_sequence UNTIL expression
Rule 187   repetitive_statement -> while_statement
Rule 188   repetitive_statement -> repeat_statement
Rule 189   repetitive_statement -> for_statement
Rule 190   result_type -> ID
Rule 191   set_type -> SET OF base_type
Rule 192   set -> LBRACKET element_list RBRACKET
Rule 193   simple_expression -> simple_expression_opt_1 term simple_expression_1
Rule 194   simple_expression_1 -> addition_operator term simple_expression_1
Rule 195   simple_expression_1 -> empty
Rule 196   simple_expression_opt_1 -> PLUS
Rule 197   simple_expression_opt_1 -> MINUS
Rule 198   simple_expression_opt_1 -> empty
Rule 199   simple_statement -> assignment_statement
Rule 200   simple_statement -> procedure_statement
Rule 201   simple_statement -> goto_statement
Rule 202   simple_statement -> empty
Rule 203   simple_type -> subrange_type
Rule 204   simple_type -> enumerated_type
Rule 205   statement_part -> BEGIN statement_sequence END
Rule 206   statement_sequence -> statement statement_sequence_1
Rule 207   statement_sequence_1 -> SEMICOLON statement statement_sequence_1
Rule 208   statement_sequence_1 -> empty
Rule 209   statement -> statement_opt_1 statement_1
Rule 210   statement_1 -> simple_statement
Rule 211   statement_1 -> structured_statement
Rule 212   statement_opt_1 -> LABEL COLON
Rule 213   statement_opt_1 -> empty
Rule 214   structured_statement -> compound_statement
Rule 215   structured_statement -> repetitive_statement
Rule 216   structured_statement -> conditional_statement
Rule 217   structured_statement -> with_statement
Rule 218   structured_type -> structered_type_opt_1 unpacked_structured_type
Rule 219   structered_type_opt_1 -> PACKED
Rule 220   structered_type_opt_1 -> empty
Rule 221   subrange_type -> lower_bound DOT DOT upper_bound
Rule 222   tag_field -> ID COLON
Rule 223   tag_field -> empty
Rule 224   term -> factor term_1
Rule 225   term_1 -> multiplication_operator factor term_1
Rule 226   term_1 -> empty
Rule 227   type_definition_part -> TYPE type_definition SEMICOLON type_definition_part_1
Rule 228   type_definition_part_1 -> type_definition SEMICOLON type_definition_part_1
Rule 229   type_definition_part_1 -> empty
Rule 230   type_definition -> ID EQUAL type
Rule 231   type -> simple_type
Rule 232   type -> structured_type
Rule 233   type -> pointer_type
Rule 234   type -> ID
Rule 235   unpacked_conformant_array_schema -> ARRAY LBRACKET bound_specification unpacked_conformant_array_schema_1 RBRACKET OF unpacked_conformant_array_schema_2
Rule 236   unpacked_conformant_array_schema_1 -> SEMICOLON bound_specification unpacked_conformant_array_schema_1
Rule 237   unpacked_conformant_array_schema_1 -> empty
Rule 238   unpacked_conformant_array_schema_2 -> ID
Rule 239   unpacked_conformant_array_schema_2 -> conformant_array_schema
Rule 240   unpacked_structured_type -> array_type
Rule 241   unpacked_structured_type -> record_type
Rule 242   unpacked_structured_type -> set_type
Rule 243   unpacked_structured_type -> file_type
Rule 244   upper_bound -> constant
Rule 245   value_parameter_section -> identifier_list COLON parameter_type
Rule 246   variable_declaration_part -> VAR variable_declaration SEMICOLON variable_declaration_part_1
Rule 247   variable_declaration_part_1 -> variable_declaration SEMICOLON variable_declaration_part_1
Rule 248   variable_declaration_part_1 -> empty
Rule 249   variable_declaration -> identifier_list COLON type
Rule 250   variable_parameter_section -> VAR identifier_list COLON parameter_type
Rule 251   variable -> entire_variable
Rule 252   variable -> component_variable
Rule 253   variable -> referenced_variable
Rule 254   variant_part -> CASE tag_field ID OF variant variant_part_1
Rule 255   variant_part_1 -> SEMICOLON variant variant_part_1
Rule 256   variant_part_1 -> empty
Rule 257   variant -> case_label_list COLON LPAREN field_list RPAREN
Rule 258   while_statement -> WHILE expression DO statement
Rule 259   with_statement -> WITH record_variable with_statement_1 DO statement
Rule 260   with_statement_1 -> COMMA record_variable with_statement_1
Rule 261   with_statement_1 -> empty
Rule 262   empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 
AMPERSANT            : 
AND                  : 143
ARRAY                : 19 155 235
ASM                  : 
ASSIGN               : 23 24 103
BEGIN                : 40 205
CASE                 : 32 254
CIRCUMFLEX           : 95 158 178
COLON                : 27 28 120 153 175 212 222 245 249 250 257
COMMA                : 7 20 30 67 73 126 148 260
CONST                : 45
CONSTRUCTOR          : 
CONSTSTRING          : 51 78
DEQUAL               : 180
DESTRUCTOR           : 
DIACRITIC            : 
DIV                  : 
DIVIDE               : 141
DO                   : 103 258 259
DOLLAR               : 
DOT                  : 1 27 27 86 221 221
DOWNTO               : 105
ELSE                 : 129
END                  : 32 40 176 205
EQUAL                : 48 179 230
EXCLAMATION          : 
EXTERNAL             : 
FILE                 : 97
FOR                  : 103
FORWARD              : 64
FUNCTION             : 120
GOTO                 : 124
GREATER              : 183
GREATEREQUAL         : 184
HASHTAG              : 
ID                   : 2 5 13 24 27 27 48 49 70 80 86 103 117 120 125 126 146 155 156 158 167 171 190 222 230 234 238 254
IF                   : 128
IMPLEMENTATION       : 
IN                   : 185
INLINE               : 
INTERFACE            : 
INTERRUPT            : 
LABEL                : 135 212
LBLOCK               : 
LBRACKET             : 19 132 155 192 235
LESS                 : 181
LESSEQUAL            : 182
LPAREN               : 3 6 71 84 106 257
LSHIFT               : 
MINUS                : 17 53 197
MOD                  : 
MODULUS              : 142
NIL                  : 79
NOT                  : 85
NUMBER               : 77 134 138 174
OBJECT               : 
OF                   : 19 32 97 155 191 235 254
OR                   : 18
PACKED               : 155 219
PIPE                 : 
PLUS                 : 16 52 196
PRIVATE              : 
PROCEDURE            : 167
PROGRAM              : 2
RBLOCK               : 
RBRACKET             : 19 132 155 192 235
RECORD               : 176
REPEAT               : 186
RPAREN               : 3 6 71 84 106 257
RSHIFT               : 
SEMICOLON            : 2 33 35 45 46 90 92 101 107 114 114 135 136 151 161 162 164 207 227 228 236 246 247 255
SET                  : 191
SHL                  : 
SHR                  : 
SQUOTE               : 
STRING               : 
THEN                 : 128
TIMES                : 140
TO                   : 104
TYPE                 : 227
UNIT                 : 
UNTIL                : 186
USES                 : 
VAR                  : 246 250
VIRTUAL              : 
WHILE                : 258
WITH                 : 259
XOR                  : 
error                : 

Nonterminals, with rules where they appear

actual_function      : 11
actual_parameter     : 6 7
actual_parameter_list : 118 172
actual_parameter_list_1 : 6 7
actual_procedure     : 12
actual_value         : 9
actual_variable      : 10
addition_operator    : 194
array_type           : 240
array_type_1         : 19 20
array_variable       : 132
assignment_statement : 199
base_type            : 191
block                : 1 116 166
bound_specification  : 155 235 236
case_element         : 32 33
case_label_list      : 28 257
case_label_list_1    : 29 30
case_statement       : 42
case_statement_1     : 32 33
case_statement_opt   : 32
component_variable   : 252
compound_statement   : 214
conditional_statement : 216
conformant_array_schema : 157 239
constant             : 29 30 48 139 244
constant_definition  : 45 46
constant_definition_part : 58
constant_definition_part_1 : 45 46
constant_opt_sign    : 49 50
declaration_part     : 26
declaration_part_opt_1 : 55
declaration_part_opt_2 : 55
declaration_part_opt_3 : 55
declaration_part_opt_4 : 55
directive            : 115 165
element_list         : 192
element_list_1       : 65 67
element_type         : 19
empty                : 4 8 21 31 34 36 47 54 57 59 61 63 66 68 74 89 91 93 102 108 119 122 127 130 137 149 152 154 163 169 173 195 198 202 208 213 220 223 226 229 237 248 256 261
entire_variable      : 251
enumerated_type      : 204
expression           : 14 23 24 32 65 67 72 73 84 94 99 113 128 133 150 186 258
expression_list      : 132
expression_list_1    : 72 73
factor               : 85 224 225
field_designator     : 38
field_list           : 176 257
field_list_opt_1     : 87
field_list_opt_2     : 87 88
field_width          : 151
file_buffer          : 39
file_component_type  : 97
file_type            : 243
file_variable        : 95
final_expression     : 103
fixed_part           : 87
fixed_part_1         : 100 101
for_statement        : 189
for_statement_opt_1  : 103
formal_parameter_list : 121 168
formal_parameter_list_1 : 106 107
formal_parameter_section : 106 107
fraction_length      : 153
function_declaration : 162
function_declaration_1 : 114
function_designator  : 83
function_designator_opt_1 : 117
function_heading     : 114 123
function_heading_opt_1 : 120
function_parameter_section : 112
goto_statement       : 201
identifier_list      : 3 71 175 245 249 250
identifier_list_1    : 125 126
if_statement         : 41
if_statement_opt_1   : 128
index_type           : 19 20
indexed_variable     : 37
initial_expression   : 103
integer              : 144
label                : 124 135 136
label_declaration_part : 56
label_declaration_part_1 : 135 136
lower_bound          : 221
multiplication_operator : 225
number               : 50
ordinal_type_identifier : 27
output_list          : 
output_list_opt_1    : 147 148
output_value         : 147 148
output_value_opt_1   : 150
output_value_opt_2   : 151
packed_conformant_array_schema : 43
parameter_type       : 245 250
pointer_type         : 233
pointer_variable     : 178
procedure_and_function_declaration_part : 
procedure_and_function_declaration_part_1 : 160 161 162
procedure_declaration : 161
procedure_declaration_1 : 164
procedure_heading    : 164 170
procedure_heading_opt_1 : 167
procedure_parameter_section : 111
procedure_statement  : 200
procedure_statement_opt_1 : 171
program              : 0
program_heading      : 1
program_heading_opt_1 : 2
real_number          : 145
record_section       : 100 101
record_type          : 241
record_variable      : 86 259 260
referenced_variable  : 253
relational_operator  : 76
repeat_statement     : 188
repetitive_statement : 215
result_type          : 120
set                  : 81
set_type             : 242
simple_expression    : 75 76 76
simple_expression_1  : 193 194
simple_expression_opt_1 : 193
simple_statement     : 210
simple_type          : 131 231
statement            : 28 103 128 129 206 207 258 259
statement_1          : 209
statement_opt_1      : 209
statement_part       : 26
statement_sequence   : 40 186 205
statement_sequence_1 : 206 207
structered_type_opt_1 : 218
structured_statement : 211
structured_type      : 232
subrange_type        : 203
tag_field            : 254
term                 : 193 194
term_1               : 224 225
type                 : 25 69 96 175 230 249
type_definition      : 227 228
type_definition_part : 60
type_definition_part_1 : 227 228
unpacked_conformant_array_schema : 44
unpacked_conformant_array_schema_1 : 235 236
unpacked_conformant_array_schema_2 : 235
unpacked_structured_type : 218
upper_bound          : 221
value_parameter_section : 109
variable             : 15 22 23 82 98 159 177
variable_declaration : 246 247
variable_declaration_part : 62
variable_declaration_part_1 : 246 247
variable_parameter_section : 110
variant              : 254 255
variant_part         : 88 90
variant_part_1       : 254 255
while_statement      : 187
with_statement       : 217
with_statement_1     : 259 260

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_heading block DOT
    (2) program_heading -> . PROGRAM ID program_heading_opt_1 SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_heading . block DOT
    (26) block -> . declaration_part statement_part
    (55) declaration_part -> . declaration_part_opt_1 declaration_part_opt_2 declaration_part_opt_3 declaration_part_opt_4
    (56) declaration_part_opt_1 -> . label_declaration_part
    (57) declaration_part_opt_1 -> . empty
    (135) label_declaration_part -> . LABEL label label_declaration_part_1 SEMICOLON
    (262) empty -> .

    LABEL           shift and go to state 9
    CONST           reduce using rule 262 (empty -> .)
    TYPE            reduce using rule 262 (empty -> .)
    VAR             reduce using rule 262 (empty -> .)
    BEGIN           reduce using rule 262 (empty -> .)

    block                          shift and go to state 4
    declaration_part               shift and go to state 5
    declaration_part_opt_1         shift and go to state 6
    label_declaration_part         shift and go to state 7
    empty                          shift and go to state 8

state 3

    (2) program_heading -> PROGRAM . ID program_heading_opt_1 SEMICOLON

    ID              shift and go to state 10


state 4

    (1) program -> program_heading block . DOT

    DOT             shift and go to state 11


state 5

    (26) block -> declaration_part . statement_part
    (205) statement_part -> . BEGIN statement_sequence END

    BEGIN           shift and go to state 13

    statement_part                 shift and go to state 12

state 6

    (55) declaration_part -> declaration_part_opt_1 . declaration_part_opt_2 declaration_part_opt_3 declaration_part_opt_4
    (58) declaration_part_opt_2 -> . constant_definition_part
    (59) declaration_part_opt_2 -> . empty
    (45) constant_definition_part -> . CONST constant_definition SEMICOLON constant_definition_part_1
    (262) empty -> .

    CONST           shift and go to state 17
    TYPE            reduce using rule 262 (empty -> .)
    VAR             reduce using rule 262 (empty -> .)
    BEGIN           reduce using rule 262 (empty -> .)

    declaration_part_opt_2         shift and go to state 14
    constant_definition_part       shift and go to state 15
    empty                          shift and go to state 16

state 7

    (56) declaration_part_opt_1 -> label_declaration_part .

    CONST           reduce using rule 56 (declaration_part_opt_1 -> label_declaration_part .)
    TYPE            reduce using rule 56 (declaration_part_opt_1 -> label_declaration_part .)
    VAR             reduce using rule 56 (declaration_part_opt_1 -> label_declaration_part .)
    BEGIN           reduce using rule 56 (declaration_part_opt_1 -> label_declaration_part .)


state 8

    (57) declaration_part_opt_1 -> empty .

    CONST           reduce using rule 57 (declaration_part_opt_1 -> empty .)
    TYPE            reduce using rule 57 (declaration_part_opt_1 -> empty .)
    VAR             reduce using rule 57 (declaration_part_opt_1 -> empty .)
    BEGIN           reduce using rule 57 (declaration_part_opt_1 -> empty .)


state 9

    (135) label_declaration_part -> LABEL . label label_declaration_part_1 SEMICOLON
    (138) label -> . NUMBER

    NUMBER          shift and go to state 19

    label                          shift and go to state 18

state 10

    (2) program_heading -> PROGRAM ID . program_heading_opt_1 SEMICOLON
    (3) program_heading_opt_1 -> . LPAREN identifier_list RPAREN
    (4) program_heading_opt_1 -> . empty
    (262) empty -> .

    LPAREN          shift and go to state 21
    SEMICOLON       reduce using rule 262 (empty -> .)

    program_heading_opt_1          shift and go to state 20
    empty                          shift and go to state 22

state 11

    (1) program -> program_heading block DOT .

    $end            reduce using rule 1 (program -> program_heading block DOT .)


state 12

    (26) block -> declaration_part statement_part .

    DOT             reduce using rule 26 (block -> declaration_part statement_part .)


state 13

    (205) statement_part -> BEGIN . statement_sequence END
    (206) statement_sequence -> . statement statement_sequence_1
    (209) statement -> . statement_opt_1 statement_1
    (212) statement_opt_1 -> . LABEL COLON
    (213) statement_opt_1 -> . empty
    (262) empty -> .

    LABEL           shift and go to state 26
    ID              reduce using rule 262 (empty -> .)
    GOTO            reduce using rule 262 (empty -> .)
    BEGIN           reduce using rule 262 (empty -> .)
    WITH            reduce using rule 262 (empty -> .)
    WHILE           reduce using rule 262 (empty -> .)
    REPEAT          reduce using rule 262 (empty -> .)
    FOR             reduce using rule 262 (empty -> .)
    IF              reduce using rule 262 (empty -> .)
    CASE            reduce using rule 262 (empty -> .)
    SEMICOLON       reduce using rule 262 (empty -> .)
    END             reduce using rule 262 (empty -> .)

    statement_sequence             shift and go to state 23
    statement                      shift and go to state 24
    statement_opt_1                shift and go to state 25
    empty                          shift and go to state 27

state 14

    (55) declaration_part -> declaration_part_opt_1 declaration_part_opt_2 . declaration_part_opt_3 declaration_part_opt_4
    (60) declaration_part_opt_3 -> . type_definition_part
    (61) declaration_part_opt_3 -> . empty
    (227) type_definition_part -> . TYPE type_definition SEMICOLON type_definition_part_1
    (262) empty -> .

    TYPE            shift and go to state 31
    VAR             reduce using rule 262 (empty -> .)
    BEGIN           reduce using rule 262 (empty -> .)

    declaration_part_opt_3         shift and go to state 28
    type_definition_part           shift and go to state 29
    empty                          shift and go to state 30

state 15

    (58) declaration_part_opt_2 -> constant_definition_part .

    TYPE            reduce using rule 58 (declaration_part_opt_2 -> constant_definition_part .)
    VAR             reduce using rule 58 (declaration_part_opt_2 -> constant_definition_part .)
    BEGIN           reduce using rule 58 (declaration_part_opt_2 -> constant_definition_part .)


state 16

    (59) declaration_part_opt_2 -> empty .

    TYPE            reduce using rule 59 (declaration_part_opt_2 -> empty .)
    VAR             reduce using rule 59 (declaration_part_opt_2 -> empty .)
    BEGIN           reduce using rule 59 (declaration_part_opt_2 -> empty .)


state 17

    (45) constant_definition_part -> CONST . constant_definition SEMICOLON constant_definition_part_1
    (48) constant_definition -> . ID EQUAL constant

    ID              shift and go to state 33

    constant_definition            shift and go to state 32

state 18

    (135) label_declaration_part -> LABEL label . label_declaration_part_1 SEMICOLON
    (136) label_declaration_part_1 -> . SEMICOLON label label_declaration_part_1
    (137) label_declaration_part_1 -> . empty
    (262) empty -> .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 35

  ! SEMICOLON       [ reduce using rule 262 (empty -> .) ]

    label_declaration_part_1       shift and go to state 34
    empty                          shift and go to state 36

state 19

    (138) label -> NUMBER .

    SEMICOLON       reduce using rule 138 (label -> NUMBER .)
    END             reduce using rule 138 (label -> NUMBER .)
    UNTIL           reduce using rule 138 (label -> NUMBER .)
    ELSE            reduce using rule 138 (label -> NUMBER .)


state 20

    (2) program_heading -> PROGRAM ID program_heading_opt_1 . SEMICOLON

    SEMICOLON       shift and go to state 37


state 21

    (3) program_heading_opt_1 -> LPAREN . identifier_list RPAREN
    (125) identifier_list -> . ID identifier_list_1

    ID              shift and go to state 39

    identifier_list                shift and go to state 38

state 22

    (4) program_heading_opt_1 -> empty .

    SEMICOLON       reduce using rule 4 (program_heading_opt_1 -> empty .)


state 23

    (205) statement_part -> BEGIN statement_sequence . END

    END             shift and go to state 40


state 24

    (206) statement_sequence -> statement . statement_sequence_1
    (207) statement_sequence_1 -> . SEMICOLON statement statement_sequence_1
    (208) statement_sequence_1 -> . empty
    (262) empty -> .

    SEMICOLON       shift and go to state 42
    END             reduce using rule 262 (empty -> .)
    UNTIL           reduce using rule 262 (empty -> .)

    statement_sequence_1           shift and go to state 41
    empty                          shift and go to state 43

state 25

    (209) statement -> statement_opt_1 . statement_1
    (210) statement_1 -> . simple_statement
    (211) statement_1 -> . structured_statement
    (199) simple_statement -> . assignment_statement
    (200) simple_statement -> . procedure_statement
    (201) simple_statement -> . goto_statement
    (202) simple_statement -> . empty
    (214) structured_statement -> . compound_statement
    (215) structured_statement -> . repetitive_statement
    (216) structured_statement -> . conditional_statement
    (217) structured_statement -> . with_statement
    (23) assignment_statement -> . variable ASSIGN expression
    (24) assignment_statement -> . ID ASSIGN expression
    (171) procedure_statement -> . ID procedure_statement_opt_1
    (124) goto_statement -> . GOTO label
    (262) empty -> .
    (40) compound_statement -> . BEGIN statement_sequence END
    (187) repetitive_statement -> . while_statement
    (188) repetitive_statement -> . repeat_statement
    (189) repetitive_statement -> . for_statement
    (41) conditional_statement -> . if_statement
    (42) conditional_statement -> . case_statement
    (259) with_statement -> . WITH record_variable with_statement_1 DO statement
    (251) variable -> . entire_variable
    (252) variable -> . component_variable
    (253) variable -> . referenced_variable
    (258) while_statement -> . WHILE expression DO statement
    (186) repeat_statement -> . REPEAT statement_sequence UNTIL expression
    (103) for_statement -> . FOR ID ASSIGN initial_expression for_statement_opt_1 final_expression DO statement
    (128) if_statement -> . IF expression THEN statement if_statement_opt_1
    (32) case_statement -> . CASE expression OF case_element case_statement_1 case_statement_opt END
    (70) entire_variable -> . ID
    (37) component_variable -> . indexed_variable
    (38) component_variable -> . field_designator
    (39) component_variable -> . file_buffer
    (178) referenced_variable -> . pointer_variable CIRCUMFLEX
    (132) indexed_variable -> . array_variable LBRACKET expression_list RBRACKET
    (86) field_designator -> . record_variable DOT ID
    (95) file_buffer -> . file_variable CIRCUMFLEX
    (159) pointer_variable -> . variable
    (22) array_variable -> . variable
    (177) record_variable -> . variable
    (98) file_variable -> . variable

    ID              shift and go to state 56
    GOTO            shift and go to state 57
    SEMICOLON       reduce using rule 262 (empty -> .)
    END             reduce using rule 262 (empty -> .)
    UNTIL           reduce using rule 262 (empty -> .)
    ELSE            reduce using rule 262 (empty -> .)
    BEGIN           shift and go to state 58
    WITH            shift and go to state 64
    WHILE           shift and go to state 69
    REPEAT          shift and go to state 70
    FOR             shift and go to state 71
    IF              shift and go to state 72
    CASE            shift and go to state 73

    statement_1                    shift and go to state 44
    simple_statement               shift and go to state 45
    structured_statement           shift and go to state 46
    assignment_statement           shift and go to state 47
    procedure_statement            shift and go to state 48
    goto_statement                 shift and go to state 49
    empty                          shift and go to state 50
    compound_statement             shift and go to state 51
    repetitive_statement           shift and go to state 52
    conditional_statement          shift and go to state 53
    with_statement                 shift and go to state 54
    variable                       shift and go to state 55
    while_statement                shift and go to state 59
    repeat_statement               shift and go to state 60
    for_statement                  shift and go to state 61
    if_statement                   shift and go to state 62
    case_statement                 shift and go to state 63
    record_variable                shift and go to state 65
    entire_variable                shift and go to state 66
    component_variable             shift and go to state 67
    referenced_variable            shift and go to state 68
    indexed_variable               shift and go to state 74
    field_designator               shift and go to state 75
    file_buffer                    shift and go to state 76
    pointer_variable               shift and go to state 77
    array_variable                 shift and go to state 78
    file_variable                  shift and go to state 79

state 26

    (212) statement_opt_1 -> LABEL . COLON

    COLON           shift and go to state 80


state 27
